@@ -7,11 +7,7 @@ require_once(WWW_DIR."lib/site.php");
 //remove folders from tmpunrar
 $site = new Sites();
 $tmpunrar = $site->get()->tmpunrarpath;
-if ((count(glob("$tmpunrar/*",GLOB_ONLYDIR))) > 0)
-{
-	echo "Removing dead folders from ".$tmpunrar."\n";
-	exec("rm -r ".$tmpunrar."/*");
-}
+rmtree($tmpunrar);
 
 if (isset($argv[1]) && !is_numeric($argv[1]) && $argv[1] == "all" && $argv[1] !== "allinf" && $argv[1] !== "tmux" && $argv[1] !== "book" && $argv[1] !== "nfo" && $argv[1] !== "movies" && $argv[1] !== "music" && $argv[1] !== "games" && $argv[1] !== "anime" && $argv[1] !== "tv" && $argv[1] !== "additional" && isset($argv[2]) && ($argv[2] == "true" || $argv[2] == "false"))
 {
@@ -166,3 +162,27 @@ else
 		."php postprocess.php allinf true		...: Does all the types of post processing on a loop, sleeping 15 seconds between.\n"
 		."The second argument (true/false) determines wether to echo or not.\n\n");
 }
+
+
+/**
+ * Delete a file or directory recursively.
+ * @param string $path
+ * found here, modded to only delete subfolders
+ * https://gist.github.com/SteelPangolin/1407308
+ */
+function rmtree($path)
+{
+	if (is_dir($path))
+	{
+		foreach (scandir($path) as $name)
+		{
+			if (in_array($name, array('.', '..')))
+			{
+				continue;
+			}
+			$subpath = $path.DIRECTORY_SEPARATOR.$name;
+			rmtree($subpath);
+		}
+	}
+}
+
