@@ -1,3 +1,6 @@
+07192013 -> jonnyboy -> fixed bug in postprocess(windows)
+						fixed bug in safe backfill, was adding parts to partrepair, you many need to run: truncate table partrepair;
+						fixed bug in predb, you will need to run this query: update predb set title = replace (title, '  - omgwtfnzbs.org', '');
 07182013 -> jonnyboy -> added alternate nntp to install
 						fixed bug in orlydb
 						fixed bug in threaded postprocess
